# bulletin

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.md  app.js  fr.json  issues-clean.json  issues-processed.json  issues-raw.json  issues.json  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  ret.py  run.sh  uwsgi.ini  uwsgi2.ini
bulletin/: __init__.py  download.py  fill_db.py  init.sql  package-lock.json  package.json  server.py  wsgi.py
bulletin/client/: .prettierrc.toml  package-lock.json
bulletin/client/public/: index.html
bulletin/client/src/: App.js  Articles.js  ChatBulletin.js  ChatBulletin.module.scss  Cover.js  Cover.module.scss  Disclaimer.js  Disclaimer.module.scss  Footer.js  Header.js  Main.js  TypingEffect.js  index.js  issues.json  main.scss  processed_issues.json  util.js
bulletin/maintenance/: compress.py  download.py  fill_db.py  issues-processed.json  issues-raw.json  missing.py
bulletin/public/: index.html
bulletin/rag/: chunk.py  embed.py  embeddings.json
bulletin/src/: App.js  Articles.js  Articles.module.scss  Footer.js  Header.js  Look.js  Look.module.scss  Main.js  WelcomeModal.js  index.js  main.scss  processed_issues.json
public/: index.html  main.js
search/: check_pdfs.py  docker-compose.yml  download.py  fill_db.py  init.sql  post_init.sql  processed_issues.json  pyproject.toml  search.py  server.py  stopwords.py  test.py  trailing_zero.py  uwsgi.ini
styles/: main.scss
