[project]
name = "bulletin"
authors = [
    {name = "Tomas Roun", email = "tomas.roun8@gmail.com"},
]
description = "CERN Bulletin Online Archive"
readme = "README.md"
requires-python = ">=3.11"
# license = "GPL version 3, excluding DRM provisions"
dependencies = ["flask", "psycopg2-binary"]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
    "isort",
    "pre-commit"
]

[project.urls]
Homepage = "https://github.com/tomasr8/bulletin"
Github = "https://github.com/tomasr8/bulletin"

[tool.isort]
line_length=120
lines_after_imports=2

# [tool.setuptools]
# packages = ["bulletin"]

[tool.setuptools.dynamic]
version = {attr = "bulletin.__version__"}

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["bulletin"]
exclude = ["bulletin/client/node_modules", "bulletin/client/public"]